kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkaja-chatbot-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8501
  selector:
    app: linkaja-chatbot
